# CMake_Practice

./: CMakeLists.txt
src/: CMakeLists.txt  hello.cpp  hello.h  main.cpp
test/: CMakeLists.txt
